[package]
name = "transcode"
version = "0.0.1"
authors = [ "Bjørn Uhre Arnholtz <rugkiks@gmail.com>" ]
description = "Command-line utility for converting directories of audio/video format to run on a raspberry pi."
repository = "https://github.com/bjornua/transcode"
license = "MIT"
readme = "README.md"

[profile.dev]
debug = true

[dependencies]
rustc-serialize = "0.3.19"
regex = "0.1.77"
